--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "spatie/pdf-to-image": "*"
+        "spatie/image": "^2.2",
+        "spatie/pdf-to-image": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
